Add tests
RISDEV-5533